# delphi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  compliance.py  envelope.py  jobs.py  routes.py  schema.py  server.py  wsgi.py
api/migrations/: 0001_forecast_jobs.sql
benchmarks/: DOCUMENTATION.md  __init__.py  base.py  forecastbench.py  live.py  market_consensus.py  metaculus.py  suites.py
benchmarks/fetchers/: __init__.py  forecastbench_repo.py  metaculus_api.py
benchmarks/live_loop/: __init__.py  harvest.py  score.py
common/: __init__.py  cli.py  composition.py  doctor.py  logging.py  secrets.py  settings.py
common/http/: __init__.py  client.py  config.py  errors.py
common/llm/: __init__.py  anthropic_api.py  bedrock.py  config.py  embedding.py  errors.py  structured.py  tiering.py
conductor/: __init__.py  corpus.py  heuristic.py  roles.py
conductor/learned/: __init__.py  export.py  reward.py  rollout.py  trainer.py
core/agents/: __init__.py  base.py
core/forecast/: BAYESIAN_DOCUMENTATION.md  DOCUMENTATION.md  LEAKAGE_JUDGE_DOCUMENTATION.md  SUPERVISOR_DOCUMENTATION.md  UNCERTAINTY_DOCUMENTATION.md  __init__.py  agentic_search.py  bayesian.py  cache.py  calibration.py  ensemble.py  leakage_batch.py  leakage_judge.py  leakage_validation.py  llm.py  search.py  supervisor.py  uncertainty.py
core/memory/: DOCUMENTATION.md  README.md  __init__.py  embedder.py  index.py  recall.py
core/orchestration/: __init__.py  budget.py  run_state.py  schedules.py  types.py
core/pit/: __init__.py  models.py  store.py  view.py
core/registry/: DOCUMENTATION.md  README.md  __init__.py  fingerprint.py  models.py  store.py
db/init/: 01-extensions.sql
deploy/: README.md
deploy/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
evaluation/: __init__.py  aggregate.py  baselines.py  calibration_split.py  harness.py  leakage_audit.py  reliability.py  report.py  scoring.py
forecaster/: __init__.py  calibration_artifact.py  chain.py  record.py
forecaster/stages/: __init__.py  aggregate.py  base_rate.py  calibrate.py  decompose.py  inside_view.py  leakage_gate.py  series_estimate.py
intake/: __init__.py  llm.py  normalize.py  refusal.py  service.py  typing.py
resolution/: __init__.py  benchmark_source.py  service.py  sources.py
sources/: __init__.py  asof_filter.py  searcher.py  series.py  snapshot.py
sources/providers/: __init__.py  gdelt.py  hosted.py  tavily.py  wikipedia.py
tests/: conftest.py  test_hermeticity.py
tests/api/: conftest.py  test_auth.py  test_compliance.py  test_envelope.py  test_jobs.py  test_jobs_postgres_integration.py  test_jobs_postgres_mocked.py  test_jobs_routes.py  test_routes.py  test_schema.py  test_server.py  test_wsgi.py
tests/common/: test_cli.py  (+5 more)
(+103 files in other folders)
