[project]
name = "delphi"
version = "0.1.0"
description = "General-purpose superforecaster: question in, calibrated forecast out"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "jzyzak", email = "107331091+jzyzak@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "polars>=1.42.1",
    "pydantic>=2.13.4",
    "structlog>=26.1.0",
    "psycopg[binary]>=3.3.4",
    "pgvector>=0.5.0",
    # Default LLM transport: the direct Anthropic (Claude) API.
    "anthropic>=0.116.0",
    # boto3 powers the opt-in AWS path (Bedrock transport, Secrets Manager, S3).
    "boto3>=1.43.48",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "hypothesis>=6.156.6",
    "ruff>=0.15.21",
    "pyright>=1.1.411",
    "pre-commit>=4.6.0",
]
# Production WSGI server for the published API (`api.wsgi:application`). Kept
# out of the default install so local dev/tests need no extra deps; the Docker
# image installs it with `uv sync --extra serve`.
serve = [
    "gunicorn>=26.0.0",
]

[project.scripts]
delphi = "common.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "common",
    "intake",
    "sources",
    "forecaster",
    "resolution",
    "evaluation",
    "benchmarks",
    "conductor",
    "api",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
include = [
    "core",
    "common",
    "intake",
    "sources",
    "forecaster",
    "resolution",
    "evaluation",
    "benchmarks",
    "conductor",
    "api",
    "tests",
]
exclude = [".venv", "**/__pycache__"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
filterwarnings = [
    # Fail loudly if the pydantic protected-namespace warning ever comes back.
    "error:.*protected namespace.*:UserWarning",
]
markers = [
    "postgres: tests requiring a reachable PostgreSQL instance (DELPHI_PG_DSN)",
    "e2e: full-loop end-to-end tests (real Postgres, mocked LLM transport)",
    "live: operator smoke tests hitting the real Anthropic API/Tavily/Postgres (DELPHI_LIVE_SMOKE=1)",
]

# App packages are added here as each gains real, tested code (per phase), so
# coverage never reports not-yet-implemented skeletons as 0%.
[tool.coverage.run]
source = [
    "core/pit",
    "core/forecast",
    "core/registry",
    "core/memory",
    "core/orchestration",
    "core/agents",
    "common",
    "intake",
    "sources",
    "forecaster",
    "resolution",
    "evaluation",
    "benchmarks",
    "conductor",
    "api",
]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
